# auto-score

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  lg-100096699677900503-aug-beethoven--page-14.xml
data/deepscores/: lg-7630010-aug-beethoven--page-35.xml
data/stav_output/: lg-7630010-aug-beethoven--page-35.xml
datasets/Artificial/: lg-168874786-aug-lilyjazz--page-1.xml  lg-188373883-aug-beethoven--page-22.xml  lg-206466771-aug-beethoven--page-7.xml  lg-243135727448191032-aug-gutenberg1939--page-2.xml  lg-36662712-aug-gonville--page-2.xml  lg-384197861556945005-aug-gonville--page-3.xml  lg-440299613969582278-aug-gonville--page-10.xml  lg-49152626-aug-emmentaler--page-9.xml  lg-506032682395560993-aug-gonville--page-97.xml  lg-53610310-aug-gutenberg1939-.xml  lg-589779137106981191-aug-emmentaler--page-8.xml  lg-615640859311074448-aug-gutenberg1939--page-1.xml  lg-671185860120318973-aug-gutenberg1939--page-7.xml  lg-86023438-aug-gonville--page-2.xml  lg-94972812-aug-gutenberg1939--page-1.xml
datasets/Handwritten/: p001_W-45_typeset-emulation.xml  p002_W-27_typeset-emulation.xml  p003_W-27_typeset-emulation.xml  p009_W-25_typeset-emulation.xml  p010_W-22_typeset-emulation.xml  p012_W-25_typeset-emulation.xml  p014_W-22_typeset-emulation.xml  p015_W-22_typeset-emulation.xml  p016_W-27_typeset-emulation.xml  p018_W-45_typeset-emulation.xml  p020_W-25_typeset-emulation.xml
doc/html/: ____init_____8py.html  ____init_____8py_source.html  annotated.html  autoscore_8cc.html  autoscore_8cc__incl.map  autoscore_8cc__incl.md5  autoscore_8cc_source.html  classautoscore_1_1datasets_1_1MusicFile-members.html  classautoscore_1_1datasets_1_1MusicFile.html  classautoscore_1_1model_1_1Net-members.html  classautoscore_1_1model_1_1Net.html  classautoscore_1_1model_1_1Net__coll__graph.map  classautoscore_1_1model_1_1Net__inherit__graph.md5  classautoscore_1_1musicdata_1_1MusicFile-members.html  classautoscore_1_1musicdata_1_1MusicFile.html  classes.html  classtinyxml2_1_1DynArray-members.html  classtinyxml2_1_1DynArray.html  classtinyxml2_1_1MemPool-members.html  classtinyxml2_1_1MemPool.html  classtinyxml2_1_1MemPoolT-members.html  classtinyxml2_1_1MemPoolT.html  classtinyxml2_1_1MemPoolT__coll__graph.map  classtinyxml2_1_1MemPoolT__coll__graph.md5  classtinyxml2_1_1MemPool__inherit__graph.map  classtinyxml2_1_1StrPair-members.html  classtinyxml2_1_1StrPair.html  classtinyxml2_1_1XMLAttribute-members.html  classtinyxml2_1_1XMLAttribute.html  classtinyxml2_1_1XMLAttribute__coll__graph.map  classtinyxml2_1_1XMLAttribute__coll__graph.md5  classtinyxml2_1_1XMLComment-members.html  classtinyxml2_1_1XMLComment.html  classtinyxml2_1_1XMLComment__coll__graph.map  classtinyxml2_1_1XMLConstHandle.html  (+162 more)
notebooks/: Untitled.ipynb  auto-score.ipynb  autotab.ipynb  groundtruth.ipynb
scripts/: count_foreach_dir.sh
src/: __init__.py  detect_staffs.cc  model.py  musicdata.py  musicdata2.py  score.py
(+190 files in other folders)
